# langchain-workspace

ch01/: README.md  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py  ex07.py  ex08.py  ex09.py  ex10.py  ex11.py  ex12.py  ex13.py  ex14.py  ex15.py  example_basic.txt  pyproject.toml
ch01/src/: 01_var.py  02_if.py  03_for.py  04_while.py  05_func.py  06_io.py  07_io.py  08_with.py  09_with.py  10_try.py  11_compre_list.py  12_compre_dict.py  13_f.py  14_class.py  15_import.py  16_decorator.py  17_async.py  18_async.py  19_pydantic.py  20_yield.py  21_generator.py  sample.txt
ch02/: README.md  pyproject.toml
ch02/sec01/: llm_api.py
ch02/sec02/: 01_persona.py  02_zero_shot.py  03_one_shot.py  04_few_shot.py
ch02/sec03/: 01_single_turn.py  02_multi_turn.py
ch02/sec04/: img_to_txt.ipynb
ch02/sec04/img_to_txt/: app.ipynb
ch02/sec04/mp3_to_txt/: audio_to_txt.ipynb
ch02/sec04/pdf_to_txt/: 01_pdf_to_txt_pypdf.py  02_pdf_to_txt_pymupdf.py  03_txt_summary.py
ch02/sec04/pdf_to_txt/output/: out_pypdf_summary.md  output_pypdf.txt  result_pymupdf.txt
ch03/: README.md  pyproject.toml
ch03/sec01/: 01_langchain.ipynb  02_stream.ipynb  03_prompt_template.ipynb  04_lcel.ipynb  05_output_parser.ipynb
ch03/sec02/: 01_streamlit.py  02_streamlit_llm.py  03_streamlit_langchain.py  04_streamlit_langchain_lcel.py  05_streamlit_langchain_sidebar.py
ch03/sec03/: 01_models.ipynb  02_messages.ipynb  03_streamlit_langchain.py  04_streamlit_langchain_lcel.py  05_streamlit_langchain_sidebar.py
ch04/: README.md  pyproject.toml
ch04/sec01/: multi_turn.ipynb  muti_turn.ipynb
ch04/sec02/: 01_gradio_first_demo.ipynb  02_word_chain_game.ipynb  03_word_chain_game_gradio.py  word_chain_game.ipynb
ch04/sec03/: 01_streamlit_prompt_maker.py  02_streamlit_prompt_maker_multi_turn.py
ch04/sec03/prompts/: general.yaml  prompt-maker.yaml  summary.yaml
ch04/sec03/prompts_multi_turn/: general.yaml  summary.yaml
ch05/: pyproject.toml
ch05/data/: rag.md
ch05/sec01/: 01_web_loader.ipynb  02_pdf_loader.ipynb
ch05/sec02/: 01_splitter.ipynb  02_markdown_splitter.ipynb
ch05/sec02/text/: sample.md
ch05/sec03/: 01_embeddings.ipynb  02_load_split_embed.ipynb
ch05/sec04/: faiss_vector.ipynb
ch05/sec04/faiss_index/: index.faiss  index.pkl
ch06/: README.md  pyproject.toml
ch06/sec01/: rag_basic_pdf.ipynb
ch06/sec01/faiss_index/: index.faiss  index.pkl
ch06/sec02/: 01_streamlit_file_upload.py  02_streamlit_rag_pdf.py
ch06/sec02/.cache/embeddings/KCI_FI003153549_p5.pdf/: index.faiss  index.pkl
ch06/sec02/prompts/: pdf-rag.yaml
ch06/sec03/: 01_ollama.ipynb  02_streamlit_rag_pdf_bge-m3.py  03_streamlit_rag_multi_llm.py
ch06/sec03/prompts/: pdf-rag.yaml
ch06/sec04/: 01_rag_pgvector.ipynb  02_petbot.py
ch07/: README.md  pyproject.toml
ch07/sec01/: 01_langchain_tool.ipynb  02_langchain_tool_pydantic.ipynb  03_langchain_tool_ddg.ipynb
ch08/: main.py  pyproject.toml
ch08/sec01/docker-n8n-ollama-pgvector/: docker-compose.yml  n8n_ollama_pgvector_loop_code.json
ch09/: main.py  pyproject.toml
ch09/sec01/: 01_langchain_vs_langgraph.ipynb  02_langgraph_chatbot.ipynb
ch09/sec02/: 01_langgraph_chatbot_checkpoint.ipynb
ch10/: conditional_mcp.ipynb  main.py  pyproject.toml
ch10/sec01/: 01_conditional_edge.ipynb  02_conditional_routing.ipynb
ch10/sec02/: 01_conditional_tools.ipynb  02_human_in_the_loop.ipynb  temp.md
ch10/sec03/: 01_page_analyzer_basic.ipynb  02_page_analyzer_selector_generate.ipynb  03_page_analyzer_routing.ipynb
ch10/sec04/: mcp_server.py
ch11/: main.py  pyproject.toml
ch11/sec01/: 01_agent.ipynb  02_subgraphs.ipynb  03_muti_agent.ipynb
ch11/sec02/: plan_execute.ipynb
ch11/sec03/: 01_supervisor.ipynb  02_multi_agent_supervisor.ipynb  03_multi_agent_supervisor_handoff.ipynb  04_multi_agent_supervisor_delegation.ipynb  05_multi_agent_supervisor.ipynb
ch12/: main.py  pyproject.toml
ch12/sec01/: 01_langgraph_rag.ipynb  02_langgraph_rag_rewrite.ipynb  03_corrective_rag.ipynb
ch12/sec01/faiss_index/: index.pkl
ch12/sec01/faiss_web/: index.faiss  index.pkl
ch13/: main.py  pyproject.toml
ch13/docker_ollama_pgvector/: docker-compose.yml
ch13/sec01/: multi_vector_retriver.ipynb
ch13/sec01/docstore/: 4892d06d-2a4a-4ac8-9b63-091714c999d7  ba50a144-811b-4d7f-9111-fd7f219c511d  d14df64d-ab8c-4156-9e64-1b7a173bd123
ch13/sec01/faiss_index/: index.faiss  index.pkl
ch13/sec02/: 01_zerox.ipynb
ch13/sec02/documents/: sample_income_tax_p30.md
ch13/sec03/: 01_no_reranker.ipynb  02_reranker.ipynb
ch13/sec04/: guardrail.ipynb
ch14/: pyproject.toml
ch14/sec01/: langgraph_rag_multi_agent.ipynb
ch16/: main.py  pyproject.toml
ch16/sec01/: streamlit_prompt_maker_multi_turn.py
ch16/sec01/prompts_multi_turn/: general-chat-history.yaml
chatbot/: gui.py  main.py  pyproject.toml
test/: main.py  pyproject.toml  test_basic.py
test/config/: config.yaml
test/spec/: prd.md
test/src/nike_crawler/: __init__.py  config.py  logger.py  naver_shopping.py
