[project]
name = "ch04"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=1.49.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.10",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.0",
    "python-dotenv>=1.2.1",
]
