[project]
name = "ch07"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.6.0",
    "google-genai>=1.32.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.6",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.9",
    "python-dotenv>=1.1.1",
    "tabulate>=0.9.0",
    "tzdata>=2025.2",
    "yfinance>=0.2.66",
]
