[project]
name = "ch11"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.6.0",
    "fastmcp>=2.12.4",
    "geopy>=2.4.1",
    "google-genai>=1.32.0",
    "grandalf>=0.8",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.6",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.9",
    "langchain-mcp-adapters>=0.1.10",
    "langgraph>=0.6.7",
    "langgraph-supervisor>=0.0.29",
    "pyppeteer>=0.0.25",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "tabulate>=0.9.0",
    "yfinance>=0.2.66",
]
