[project]
name = "ch13"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.1",
    "ddgs>=9.6.0",
    "faiss-cpu>=1.12.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.7",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.10",
    "langchain-ollama>=0.3.10",
    "langchain-postgres>=0.0.15",
    "langgraph>=0.6.8",
    "nltk>=3.9.2",
    "psycopg>=3.2.10",
    "psycopg-binary>=3.2.10",
    "py-zerox>=0.0.7",
    "pymupdf>=1.26.4",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "unstructured[md]>=0.18.15",
]
