[project]
name = "ch16"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.7",
    "langchain-community>=0.3.30",
    "langchain-ollama>=0.3.8",
    "pypdf>=6.1.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.1",
    "langchain-google-genai>=2.1.9",
    "langchain-postgres>=0.0.15",
    "psycopg>=3.2.10",
    "psycopg-binary>=3.2.10",
    "sentence-transformers>=5.1.1",
    "langgraph>=0.6.9",
    "ddgs>=9.6.0",
]
